remove blurring which was causing fixed positioning issues

--- a/style/style.css
+++ b/style/style.css
@@ -26,13 +26,10 @@ body{
             animation: fadein 0.5s;
 	height:100%;
 	width: 100%;
-	-webkit-font-smoothing: antialiased;
+	//-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	-webkit-filter: blur(0.000001px);
 
-	-webkit-backface-visibility: hidden;
-	//-webkit-perspective: 1000;
-	//will-change: transform;
+	//-webkit-backface-visibility: hidden;
 
 	opacity: 1;
 	-webkit-transition: all 0.6s; 
